commit complete resume with styling

--- a/resume.html
+++ b/resume.html
@@ -2,20 +2,25 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <<link rel="stylesheet" href="style.css">
     <title></title>
   </head>
   <body>
+    <div class="top-banner">-</div>
+    <br />
     <h1>Jason Dang</h1>
-    <h2>Street number street name</h2>
-    <h2>xxx-xxx-xxx</h2>
-    <h2>xxx@yahoo.com</h2>
+    <h2>406 Street Name</h2>
+    <h2>(999) 999-0000<span class="email">xxx@yahoo.com</span></h2>
     <br />
     <br />
-    <h1><strong>WORK EXPERIENCE</strong></h1>
+
+    <div class="container">
+    <div class="section-divider">-</div>
+    <h1 class="work-experience-title"><strong>WORK EXPERIENCE</strong></h1>
     <br />
     <div class="">
-      <h2>Facilities Manager</h2><span>August 2016 - September 2018</span>
-      <h3><em>St. Martin de Porres</em></h3>
+      <h2 class="position-title">Facilities Manager</h2><div class="employment-date">August 2016 - September 2018</div>
+      <h3><em>St. Martin de Porres - Boulder, CO</em></h3>
       <ul>
         <li>Manage property maintenance and appearance</li>
         <li>Hire contract help</li>
@@ -26,8 +31,8 @@
     </div>
     <br />
     <div class="">
-      <h2>Receiving/Stocking Associate</h2><span>August 2015 - February 2016</span>
-      <h3><em>Lowe's</em></h3>
+      <h2 class="position-title">Receiving/Stocking Associate</h2><div class="employment-date">August 2015 - February 2016</div>
+      <h3><em>Lowe's - Louisville, CO</em></h3>
       <ul>
         <li>Unload freight from delivery truck</li>
         <li>Stock merchandise</li>
@@ -38,8 +43,8 @@
     </div>
     <br />
     <div class="">
-      <h2>Equities Trader</h2><span>January 2001 - December 2014</span>
-      <h3><em>Self-employed</em></h3>
+      <h2 class="position-title">Equities Trader</h2><span class="employment-date">January 2001 - December 2014</span>
+      <h3><em>Self-employed - Carmel Valley, CA</em></h3>
       <ul>
         <li>Anaylize fundamental and technical analyses</li>
         <li>Program custom ticker screening and technical indicators</li>
@@ -48,5 +53,10 @@
         <li>Manage portfolio performance and risks</li>
       </ul>
     </div>
+    <br />
+    <div class="section-divider">-</div>
+    <h1>Other Skills</h1>
+    <p>Computer skills, Accounting, Quickbooks, Finance, PC Hardware, Lawn care</p>
+  </div>
   </body>
 </html>
